--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <script src="https://d3js.org/d3.v4.min.js"></script>
 <script src="https://d3js.org/d3-hexbin.v0.2.min.js"></script>
-<script src="javascript/layout.js"></script>
 <script src="javascript/tSNE.js " type="text/javascript"></script>
 <script src="javascript/hexBin.js " type="text/javascript"></script>
 <script src="deps/graph-scroll/graph-scroll.js " type="text/javascript"></script>
@@ -202,6 +201,8 @@
 </body>
 
 <script>
+  let SCROLLINGTO = null;
+
   // Global
   let dispatch = d3.dispatch('decade-update', 'point-to')
 
@@ -210,21 +211,25 @@
     .graph(d3.selectAll('.stickme'))
     .container(d3.select('#container'))
     .sections(d3.selectAll('.statement'))
-    .on('active', function(i) { 
+    .on('active', function(i) {
+      // Check if decade has changed. (Changes every 3, starting @ 1)
+      if(i > 0 && (i-1)%3 == 0){
+        let decade = 1950 + (i-1)/3 * 10;
 
-      // Update charts
-      if(i == 1 || i > 1 && (i-1)%3 == 0){
-        let decade = 1950;
-          if(i > 1) {
-            decade += (i-1)/3 * 10
-          }
-          //add listener to button depending on decade
+        // Check what is currently in view. If its the scrollingto decade, set
+        // scrollingto to null, send dispatches, and update listeners.
+        if(d3.select(`.graph-scroll-active`).attr('id') === SCROLLINGTO){
+          SCROLLINGTO = null
+        }
+        if(SCROLLINGTO === null){
           document.getElementById("next_decade").removeEventListener("click", fastForwardDecade);
           document.getElementById("next_decade").addEventListener("click", () => fastForwardDecade(decade));
           dispatch.call('decade-update', this, decade)
         }
+      }
 
-      // Dispatch pointer events
+      // Dispatch pointer events (clear old ones)
+      d3.selectAll('.pointer').remove()
       if(i === 3){
         dispatch.call('point-to', this, [{x: 100, y: 100, r: 20}])
       }
@@ -243,15 +248,24 @@
 
   // Will jump forward to the given decade when triggered.
   function fastForwardDecade(decade) {
-    decade = decade == 2020 ? 'conclusion_container' : 'graph' + (decade+10);
-    document.querySelector('#' + decade).scrollIntoView({ 
+    SCROLLINGTO = decade == 2020 ? 'conclusion_container' : 'graph' + (decade+10);
+    document.querySelector('#' + SCROLLINGTO).scrollIntoView({ 
       behavior: 'smooth' 
     });
   }
 
   // Will return to a decade earlier on the page when triggered
   function returnToDecade(decade){
-    document.querySelector('#graph' + decade).scrollIntoView({ 
+    SCROLLINGTO = 'graph' + decade
+    document.querySelector('#'+SCROLLINGTO).scrollIntoView({ 
+      behavior: 'smooth' 
+    });
+  }
+
+  // Will jump to conclusion
+  function goToConclusion() {
+    SCROLLINGTO = 'conclusion_container'
+    document.querySelector('#'+SCROLLINGTO).scrollIntoView({ 
       behavior: 'smooth' 
     });
   }
