--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         </div>
         <div id="right">
           <h1>Top Keywords</h1>
-          <div id="keywords">
+          <div id="keywordSummary">
             <ol> 
               <li>keyword one</li>
               <li>keyword two</li>
@@ -212,34 +212,42 @@
     .container(d3.select('#container'))
     .sections(d3.selectAll('.statement, #conclusion_container'))
     .on('active', function(i) {
-            let active_id = d3.select(`.graph-scroll-active`).attr('id');
+      let active_id = d3.select(`.graph-scroll-active`).attr('id');
 
+      // If at the conclusion, stop all forces and prepare to jump.
       if(active_id === 'conclusion_container'){
         dispatch.call('stop-force', null)
         SCROLLINGTO = null
         return
       }
-      console.log(i);
-      if((i%2 == 0) && (i%3 != 0)){
-        document.getElementById('p2').style.backgroundColor = "yellow";
-      }
-      else if(i%3 == 0){
-        document.getElementById('p3').style.backgroundColor = "yellow";
-      }
-      else if(i == 0){
-        
-      }
-      else{
-        document.getElementById('p1').style.backgroundColor = "yellow";
+
+      // Fill progress bar
+      if(i > 0){
+        switch(i % 3){
+          case 0:
+            d3.select('#p1').classed('progress-made', true)
+            d3.select('#p2').classed('progress-made', true)
+            d3.select('#p3').classed('progress-made', true)
+            break;
+          case 1:
+            d3.select('#p1').classed('progress-made', true)
+            d3.select('#p2').classed('progress-made', false)
+            d3.select('#p3').classed('progress-made', false)
+            break;
+          case 2:
+            d3.select('#p1').classed('progress-made', true)
+            d3.select('#p2').classed('progress-made', true)
+            d3.select('#p3').classed('progress-made', false)
+            break;
+        }
+      }else{
+        d3.selectAll('.progress-made').classed('progress-made', false)
       }
 
       // Check if decade has changed. (Changes every 3, starting @ 1)
       if(i > 0 && (i-1)%3 == 0){
         let decade = 1950 + (i-1)/3 * 10;
-        document.getElementById('year').innerText = decade;
-        document.getElementById('p1').style.backgroundColor = "#471717";
-        document.getElementById('p2').style.backgroundColor = "#471717";
-        document.getElementById('p3').style.backgroundColor = "#471717";
+        d3.select('#year').html(decade);
 
         // Check what is currently in view. If its the scrollingto decade, set
         // scrollingto to null, send dispatches, and update listeners.
