--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <script src="https://d3js.org/d3.v4.min.js"></script>
 <script src="https://d3js.org/d3-hexbin.v0.2.min.js"></script>
+<script src="javascript/layout.js " type="text/javascript"></script>
 <script src="javascript/tSNE.js " type="text/javascript"></script>
 <script src="javascript/hexBin.js " type="text/javascript"></script>
 <script src="deps/graph-scroll/graph-scroll.js " type="text/javascript"></script>
@@ -51,12 +52,8 @@
         </div>
         <div id="right">
           <h1>Top Keywords</h1>
-          <div id="keywordSummary">
-            <ol> 
-              <li>keyword one</li>
-              <li>keyword two</li>
-              <li>keyword three</li>
-            </ol>
+          <div id="keywordSummaryContainer">
+            <ol id="keywordSummary"></ol>
           </div>
           <div id="buttons">
             <button class="button-item" id="next_decade">Next Decade</button>
@@ -206,6 +203,10 @@
   let DOMAIN = 'http://localhost:8000/'
   let dispatch = d3.dispatch('decade-update', 'point-to', 'stop-force')
 
+  // Keywords list:
+  let keywords;
+  let keywordSummary;
+
   // Prep the scrolly
   d3.graphScroll()
     .graph(d3.selectAll('.stickme'))
@@ -223,42 +224,22 @@
 
       // Fill progress bar
       if(i > 0){
-        switch(i % 3){
-          case 0:
-            d3.select('#p1').classed('progress-made', true)
-            d3.select('#p2').classed('progress-made', true)
-            d3.select('#p3').classed('progress-made', true)
-            break;
-          case 1:
-            d3.select('#p1').classed('progress-made', true)
-            d3.select('#p2').classed('progress-made', false)
-            d3.select('#p3').classed('progress-made', false)
-            break;
-          case 2:
-            d3.select('#p1').classed('progress-made', true)
-            d3.select('#p2').classed('progress-made', true)
-            d3.select('#p3').classed('progress-made', false)
-            break;
-        }
+        setProgress(i)
       }else{
         d3.selectAll('.progress-made').classed('progress-made', false)
       }
-      
+
       // Check if decade has changed. (Changes every 3, starting @ 1)
       if(i > 0 && (i-1)%3 == 0){
         let decade = 1950 + (i-1)/3 * 10;
         d3.select('#year').html(decade);
-
-        // Check what is currently in view. If its the scrollingto decade, set
-        // scrollingto to null, send dispatches, and update listeners.
+        
+        // Determine if target bin hit, then send updates (else skip).
         if(active_id === SCROLLINGTO){
           SCROLLINGTO = null
         }
         if(SCROLLINGTO === null){
-          document.getElementById("next_decade").removeEventListener("click", fastForwardDecade);
-          document.getElementById("next_decade").addEventListener("click", () => fastForwardDecade(decade));
-          dispatch.call('stop-force', null)
-          dispatch.call('decade-update', this, decade)
+          transitionDecade(decade, keywords)
         }
       }
 
@@ -280,29 +261,9 @@
     responses.map((d,i) => { buildHex(d3.select(`#summ-${bins[i]}`), d) })
   })
 
-  // Will jump forward to the given decade when triggered.
-  function fastForwardDecade(decade) {
-    dispatch.call('stop-force', null)
-    SCROLLINGTO = decade == 2020 ? 'conclusion_container' : 'graph' + (decade+10);
-    document.querySelector('#' + SCROLLINGTO).scrollIntoView({ 
-      behavior: 'smooth' 
-    });
-  }
-
-  // Will return to a decade earlier on the page when triggered
-  function returnToDecade(decade){
-    SCROLLINGTO = 'graph' + decade
-    document.querySelector('#'+SCROLLINGTO).scrollIntoView({ 
-      behavior: 'smooth' 
-    });
-  }
-
-  // Will jump to conclusion
-  function goToConclusion() {
-    dispatch.call('stop-force', null)
-    SCROLLINGTO = 'conclusion_container'
-    document.querySelector('#'+SCROLLINGTO).scrollIntoView({ 
-      behavior: 'smooth' 
-    });
-  }
+  // Build the keyword summary list
+  d3.json(`${DOMAIN}topkeywords.json`, (err, data) => {
+    if(err) { console.error(err); return }
+    keywords = data;
+  })
 </script>
