--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
           <div id="buttons">
             <button class="button-item" id="next_decade">Next Decade</button>
             <button class="button-item" onclick="goToConclusion()">Conclusion</button>
+            <input id="searchbox" placeholder="Search..." class="button-item" onkeydown="search(this)"/>
           </div>
         </div>
       </div>
@@ -244,9 +245,10 @@
       }
 
       // Dispatch pointer events (clear old ones)
-      d3.selectAll('.pointer').remove()
+      d3.selectAll('.story-pointer').remove()
+      d3.selectAll('.search-pointer').remove()
       if(i === 3){
-        dispatch.call('point-to', this, [{x: 100, y: 100, r: 20}])
+        dispatch.call('point-to', this, {points: [{x: 100, y: 100, r: 20}], classed:"story-pointer"})
       }
     })
 
@@ -266,4 +268,24 @@
     if(err) { console.error(err); return }
     keywords = data;
   })
+
+  function search(ele) {
+    if(event.key === 'Enter') {
+      // Clear old pointers
+      d3.selectAll('.search-pointer').remove()
+      let filtered = d3.selectAll(`[title*="${ele.value.toLowerCase()}"]`)
+      if(!filtered.empty() && filtered.size() <= 10){
+        d3.selectAll('.node').classed('outoffocus', true)
+        let pointers = []
+        filtered.each(function(){
+          pointers.push({x: this.getAttribute('cx'), y: this.getAttribute('cy'), r: 20})
+          dispatch.call('point-to', this, { points: pointers, classed:"search-pointer" })
+        })
+        .raise()
+        .classed('outoffocus', false)
+      }else{
+        d3.selectAll('.node').classed('outoffocus', false)
+      }
+    }
+  }
 </script>
